# cadify

./: .gitignore  README.drawio  README.md  main.py  newone.step  pyproject.toml  requirements.txt
cad3dify/: agents.py  chains.py  image.py  pipeline.py  render.py
sample_data/: gen-trr.step  gen_result2.step  newone.step  notone.step
